[package]
name = "grop"
version = "0.1.0"
authors = ["magodo <wztdyl@sina.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
grok = "1.1"
structopt = "0.3.13"

[patch.crates-io]
grok = { git = "https://github.com/magodo/grok", branch = "export_patterns"}
